--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,37 +1,43 @@
-﻿@model List<MvcTodoApp.Models.TaskItem>
+﻿@model List<MvcTodoApp.Models.TaskItem> 
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>تطبيق المهام اليومية - MVC</title>
-</head>
-<body>
-    <h1>قائمة المهام اليومية</h1>
-    <ul>
-        @foreach (var task in Model)
-        {
-            <li>
-                @if(task.IsComplete)
-                {
-                    <s>@task.Title</s>
-                }
-                else
-                {
-                    @task.Title
-                    <form method="post" asp-action="CompleteTask" style="display:inline;">
+<!DOCTYPE html> 
+<html> 
+<head> 
+    <meta charset="utf-8" /> 
+    <title>تطبيق المهام اليومية - MVC</title> 
+</head> 
+<body> 
+    <h1>قائمة المهام اليومية</h1> 
+    <ul> 
+        @foreach (var task in Model) 
+        { 
+            <li> 
+                @if(task.IsComplete) 
+                { 
+                    <s>@task.Title</s> 
+                } 
+                else 
+                { 
+                    @task.Title 
+                    <form method="post" asp-action="CompleteTask" style="display:inline;"> 
+                        <input type="hidden" name="id" value="@task.Id" /> 
+                        <button type="submit">اكتملت</button> 
+                    </form> 
+
+                    <!-- نموذج لتحديث عنوان المهمة -->
+                    <form method="post" asp-action="UpdateTask" style="display:inline;">
                         <input type="hidden" name="id" value="@task.Id" />
-                        <button type="submit">اكتملت</button>
+                        <input type="text" name="newTitle" placeholder="تحديث العنوان" />
+                        <button type="submit">تحديث</button>
                     </form>
+                } 
+            </li> 
+        } 
+    </ul> 
 
-                }
-            </li>
-        }
-    </ul>
-
-    <form method="post" asp-action="AddTask">
-        <input type="text" name="title" placeholder="أضف مهمة جديدة" />
-        <button type="submit">إضافة</button>
-    </form>
-</body>
+    <form method="post" asp-action="AddTask"> 
+        <input type="text" name="title" placeholder="أضف مهمة جديدة" required /> 
+        <button type="submit">إضافة</button> 
+    </form> 
+</body> 
 </html>
